--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -360,16 +360,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.dorsetforyou.com/east">East Dorset District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.staffsmoorlands.gov.uk">Staffordshire Moorlands District Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.ethnicity-facts-figures.service.gov.uk/crime-justice-and-the-law/policing/stop-and-search/latest">Stop and search | Ethnicity facts and figures</a></li>
+<li><a href="https://www.gov.ukhttp//www.rushmoor.gov.uk">Rushmoor Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.portsmouth.gov.uk">Portsmouth City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.ballymena.gov.uk/">Ballymena Borough Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.organdonation.nhs.uk/">Organ donation</a></li>
+<li><a href="https://www.gov.ukhttp//www.charnwood.gov.uk">Charnwood Borough Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.cheltenham.gov.uk">Cheltenham Borough Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.malvernhills.gov.uk/">Malvern Hills District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.hambleton.gov.uk/">Hambleton District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.e-lindsey.gov.uk">East Lindsey District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.barking-dagenham.gov.uk">London Borough of Barking and Dagenham Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.southbucks.gov.uk">South Bucks District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.cyberaware.gov.uk">Cyber Aware</a></li>
+<li><a href="https://www.gov.ukhttp//www.reading.gov.uk/">Reading Borough Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.oxford.gov.uk">Oxford City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.cotswold.gov.uk">Cotswold District Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
