--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/179024.lt">Siekiant taikos Artimuosiuose Rytuose ir Š.Afrikoje</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/jeremy-hunt-meets-japanese-pm-amid-life-sciences-week">Jeremy Hunt meets Japanese PM amid Life Sciences Week </a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/central-american-officials-take-part-in-public-private-partnerships-forum--2">Central American officials take part in Public Private Partnerships Forum</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/176281.ur">برطانوی ہائی کمشنر کی جانب سے پاکستانیوں کے لیے عید مبارک کا پیغام</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-provides-english-classes-to-costa-rican-police-officers--2">British Embassy provides English classes to Costa Rican Police Officers</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/important-notice-for-british-nationals-in-chennai--3">Important notice for British nationals in Chennai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-17th-session-of-universal-periodic-review-working-group-geneva-21-october-to-1-november-2013--3">Human Rights Council: 17th Session of Universal Periodic Review Working Group, Geneva, 21 October to 1 November 2013</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/261846.pt">Parques tecnológicos e incubadoras em Florianópolis</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/chevening-scholarship-places-in-developing-countries-tripled-for-201516">Chevening Scholarship places in developing countries tripled for 2015/16</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/296916.pt">MAGNA CARTA</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-mumbai--7">Advice for British nationals in Mumbai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/260563.pt">Missão Britânica já apoiou 500 empresas do Reino Unido em negócios no Brasil</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/188638.ru">Прием в Москве для Большого симфонического окестра</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/closure-of-the-british-embassy-phnom-penh--2">Closure of the British Embassy Phnom Penh</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/ukuzbekistan-bilateral-relations--2">UK/Uzbekistan Bilateral Relations</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/237972.es">José Ignacio Sánchez Galán, Presidente de Iberdrola,  miembro de la Orden del Imperio Británico</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/lietuvos-pirmininkavimas-es-tarybai-keli-faktai--2">Lietuvos pirmininkavimas ES Tarybai: keli faktai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/korea-celebrates-british-designers-and-artists-at-gwangju-biennale--2">Korea celebrates British designers and artists at Gwangju Biennale</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-minister-impressed-with-sa-leg-of-bloodhound-education-project--2">British Minister impressed with SA leg of Bloodhound education project</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/284721.es-419">British Council y Ministerio de Educación inician Escuela de Verano para capacitar a 400 profesores peruanos de inglés</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
