--- a/accessibility.html
+++ b/accessibility.html
@@ -106,17 +106,18 @@
 </ul>
 <p>We’ve also made the website text as simple as possible to understand.</p>
 <p><a href="https://mcmw.abilitynet.org.uk/">AbilityNet</a> has advice on making your device easier to use if you have a disability.</p>
-<h2 id='how-accessible-this-website-is'>How accessible this website is</h2><p>We know some parts of this website are not fully accessible.</p>
+<h2 id='how-accessible-this-website-is'>How accessible this website is</h2><p>We know some parts of this website are not fully accessible:</p>
 
 <ul>
-<li>Some links are broken.</li>
-<li>Some headings do not fit with the content that follows.</li>
-<li>Some links do not clearly explain where they lead, or that they lead to external sites.</li>
-<li>Some pages skip heading levels.</li>
-<li>Some images do not have good alternative text, or have no alternative text.</li>
-<li>Some content uses emojis without alternative text.</li>
-<li>There are some links to documents in PDF format that are not accessible.</li>
+<li>some links are broken.</li>
+<li>some headings do not fit with the content that follows.</li>
+<li>some links do not clearly explain where they lead, or that they lead to external sites.</li>
+<li>some pages skip heading levels.</li>
+<li>some images do not have good alternative text, or have no alternative text.</li>
+<li>some content uses emojis without alternative text.</li>
+<li>there are some links to documents in PDF format that are not accessible.</li>
 </ul>
+<p>There are also issues caused by our Technical Documentation Template.</p>
 <h2 id='feedback-and-contact-information'>Feedback and contact information</h2><p>If you need any part of this service in a different format like large print, audio recording or braille, <a href="https://www.gov.uk/contact/govuk">contact us using the GOV.UK contact form</a>.</p>
 <p>We’ll consider your request and get back to you within 5 working days.</p>
 <h2 id='reporting-accessibility-problems-with-this-website'>Reporting accessibility problems with this website</h2><p>We’re always looking to improve the accessibility of this website. If you find any problems not listed on this page or think we’re not meeting accessibility requirements, <a href="https://www.gov.uk/contact/govuk">contact us using the GOV.UK contact form</a>.</p>
@@ -124,17 +125,19 @@
 <h2 id='technical-information-about-this-websites-accessibility'>Technical information about this website’s accessibility</h2><p>GDS is committed to making its website accessible, in accordance with the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018.</p>
 <h3 id='compliance-status'>Compliance status</h3><p>This website is partially compliant with the <a href="https://www.w3.org/TR/WCAG21/">Web Content Accessibility Guidelines version 2.1</a> AA standard, due to the non-compliances listed below.</p>
 <h3 id='non-accessible-content'>Non-accessible content</h3><p>The content listed below is non-accessible for the following reasons.</p>
-<h4 id='non-compliance-with-the-accessibility-regulations'>Non-compliance with the accessibility regulations</h4>
+<h4 id='non-compliance-with-the-accessibility-regulations'>Non-compliance with the accessibility regulations</h4><p>Some parts of this website are not fully accessible because of <a href="https://tdt-documentation.london.cloudapps.digital/accessibility/#using-the-technical-documentation-template-for-your-own-documentation">issues caused by our Technical Documentation Template</a>.</p>
+<p>Additionally:</p>
+
 <ul>
-<li>Some links are broken, which fails WCAG 2.1 success criterion 2.1.1 Keyboard.</li>
-<li>Some content uses emojis without alternative text, which fails WCAG 2.1 success criteria 1.1.1 Non-text Content.</li>
-<li>Some headings do not fit with the content that follows, which fails WCAG 2.1 success criterion 2.4.6 Headings and Labels.</li>
-<li>Some links do not clearly explain where they lead, or that they lead to external sites. This fails WCAG 2.1 success criteria 2.4.4 Link Purpose (In Context) and 2.4.4 Link Purpose (In Context).</li>
-<li>Some pages skip heading levels, which fails WCAG 2.1 success criteria 1.3.1 Info and Relationships, 2.4.1 Bypass Blocks and 2.4.6 Headings and Labels.</li>
-<li>Some images do not have good alternative text or are missing alternative text, which fails WCAG 2.1 success criterion 1.1.1 Non-text Content.</li>
+<li>some links are broken, which fails WCAG 2.1 success criterion 2.1.1 Keyboard.</li>
+<li>some content uses emojis without alternative text, which fails WCAG 2.1 success criteria 1.1.1 Non-text Content.</li>
+<li>some headings do not fit with the content that follows, which fails WCAG 2.1 success criterion 2.4.6 Headings and Labels.</li>
+<li>some links do not clearly explain where they lead, or that they lead to external sites. This fails WCAG 2.1 success criteria 2.4.4 Link Purpose (In Context) and 2.4.4 Link Purpose (In Context).</li>
+<li>some pages skip heading levels, which fails WCAG 2.1 success criteria 1.3.1 Info and Relationships, 2.4.1 Bypass Blocks and 2.4.6 Headings and Labels.</li>
+<li>some images do not have good alternative text or are missing alternative text, which fails WCAG 2.1 success criterion 1.1.1 Non-text Content.</li>
 </ul>
 <h2 id='what-were-doing-to-improve-accessibility'>What we’re doing to improve accessibility</h2><p>We plan to fix the accessibility issues in the content by the end of September 2021.</p>
-<h2 id='preparation-of-this-accessibility-statement'>Preparation of this accessibility statement</h2><p>This statement was prepared on 2 September 2020. It was last reviewed on 26 March 2021.</p>
+<h2 id='preparation-of-this-accessibility-statement'>Preparation of this accessibility statement</h2><p>This statement was prepared on 2 September 2020. It was last reviewed on 30 June 2021.</p>
 <p>This website was last tested in August 2020. The test was carried out by the technical writing team at GDS. We used the <a href="https://wave.webaim.org/">WAVE Web Accessibility Evaluation Tool</a> and a checklist we created with the help of the GDS accessibility team. We tested a sample of pages from each section of the site.</p>
 
             
